Most of the tutorial completed, still needs testing and summary